# clean-copy

./: README.md  pyproject.toml
clean_copy/: __init__.py  clean_copy.py  cli.py
tests/: test_get.py
