[tool.poetry]
name = "clean-copy"
version = "0.1.0"
description = ""
authors = ["Yulin Li <liyulin@pku.edu.cn>"]
readme = "README.md"
packages = [{include = "clean_copy"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pathspec = "^0.11.1"

[tool.poetry.scripts]
clean-copy = "clean_copy.cli:main"

[tool.black]
line-length = 120
exclude = '''
(
  \.git
  | \.tox
  | venv
  | build
  | dist
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
